--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Curso com Entrega de Diploma e suporte por 6 meses">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
                 <div class="image-wrap mb-4">
-                    <img src="assets/images/m-3.png" alt="">
+                    <img src="assets/images/m-8.png" alt="">
                 </div>
                 
                 
@@ -127,13 +127,13 @@ Curso com Entrega de Diploma e suporte por 6 meses">
 
     <div class="container">
         <div class="mbr-section-head">
-            <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>ESTÁ INCLUIDO NA MASTERCLASS</strong></h3>
+            <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>ESTÁ INCLUÍDO NA MASTERCLASS</strong></h3>
             <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Curso inclui apostila e Diploma&nbsp;</h4>
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sWSkTas3U1-modal">
-                    <img class="w-100" src="assets/images/254863244.jpg" alt="" data-slide-to="0" data-target="#lb-sWSkTas3U1">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sWSukXoCA8-modal">
+                    <img class="w-100" src="assets/images/254863244.jpg" alt="" data-slide-to="0" data-target="#lb-sWSukXoCA8">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -141,8 +141,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Curso com apostila e Diploma</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sWSkTas3U1-modal">
-                    <img class="w-100" src="assets/images/52924076.jpg" alt="" data-slide-to="1" data-target="#lb-sWSkTas3U1">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sWSukXoCA8-modal">
+                    <img class="w-100" src="assets/images/52924076.jpg" alt="" data-slide-to="1" data-target="#lb-sWSukXoCA8">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -150,8 +150,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Café da Manha no Hotel<br>das 8:00 am as 9:00<br></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sWSkTas3U1-modal">
-                    <img class="w-100" src="assets/images/52924154.jpg" alt="" data-slide-to="2" data-target="#lb-sWSkTas3U1">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sWSukXoCA8-modal">
+                    <img class="w-100" src="assets/images/52924154.jpg" alt="" data-slide-to="2" data-target="#lb-sWSukXoCA8">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -159,8 +159,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Almoço no Hotel<br>das 12:00 até as 13:00</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sWSkTas3U1-modal">
-                    <img class="w-100" src="assets/images/52924242.jpg" alt="" data-slide-to="3" data-target="#lb-sWSkTas3U1">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sWSukXoCA8-modal">
+                    <img class="w-100" src="assets/images/52924242.jpg" alt="" data-slide-to="3" data-target="#lb-sWSukXoCA8">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -169,11 +169,11 @@ Curso com Entrega de Diploma e suporte por 6 meses">
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sWSkTas3U1-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sWSukXoCA8-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sWSkTas3U1" data-interval="5000">
+                        <div class="carousel slide" id="lb-sWSukXoCA8" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/254863244.jpg" alt="">
@@ -189,18 +189,18 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sWSkTas3U1"></li>
-                                <li data-slide-to="1" data-target="#lb-sWSkTas3U1"></li>
-                                <li data-slide-to="2" data-target="#lb-sWSkTas3U1"></li>
-                                <li data-slide-to="3" data-target="#lb-sWSkTas3U1"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sWSukXoCA8"></li>
+                                <li data-slide-to="1" data-target="#lb-sWSukXoCA8"></li>
+                                <li data-slide-to="2" data-target="#lb-sWSukXoCA8"></li>
+                                <li data-slide-to="3" data-target="#lb-sWSukXoCA8"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sWSkTas3U1">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sWSukXoCA8">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sWSkTas3U1">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sWSukXoCA8">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -322,7 +322,7 @@ Curso com Entrega de Diploma e suporte por 6 meses">
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">Mobirise</a> easy maker</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/o" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
