--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@ Curso com Entrega de Diploma e suporte por 6 meses">
   
   
   
-  
+  <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '329981905765968');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=329981905765968&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+
 </head>
 <body>
   
@@ -133,8 +151,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sYAE0qN0r7-modal">
-                    <img class="w-100" src="assets/images/254863244.jpg" alt="" data-slide-to="0" data-target="#lb-sYAE0qN0r7">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sYEkBIWTIW-modal">
+                    <img class="w-100" src="assets/images/254863244.jpg" alt="" data-slide-to="0" data-target="#lb-sYEkBIWTIW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -142,8 +160,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Curso com apostila e Diploma</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sYAE0qN0r7-modal">
-                    <img class="w-100" src="assets/images/52924076.jpg" alt="" data-slide-to="1" data-target="#lb-sYAE0qN0r7">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sYEkBIWTIW-modal">
+                    <img class="w-100" src="assets/images/52924076.jpg" alt="" data-slide-to="1" data-target="#lb-sYEkBIWTIW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -151,8 +169,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Café da Manha no Hotel<br>das 8:00 am as 9:00<br></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sYAE0qN0r7-modal">
-                    <img class="w-100" src="assets/images/52924154.jpg" alt="" data-slide-to="2" data-target="#lb-sYAE0qN0r7">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sYEkBIWTIW-modal">
+                    <img class="w-100" src="assets/images/52924154.jpg" alt="" data-slide-to="2" data-target="#lb-sYEkBIWTIW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -160,8 +178,8 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">Almoço no Hotel<br>das 12:00 até as 13:00</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sYAE0qN0r7-modal">
-                    <img class="w-100" src="assets/images/52924242.jpg" alt="" data-slide-to="3" data-target="#lb-sYAE0qN0r7">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sYEkBIWTIW-modal">
+                    <img class="w-100" src="assets/images/52924242.jpg" alt="" data-slide-to="3" data-target="#lb-sYEkBIWTIW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -170,11 +188,11 @@ Curso com Entrega de Diploma e suporte por 6 meses">
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sYAE0qN0r7-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sYEkBIWTIW-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sYAE0qN0r7" data-interval="5000">
+                        <div class="carousel slide" id="lb-sYEkBIWTIW" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/254863244.jpg" alt="">
@@ -190,18 +208,18 @@ Curso com Entrega de Diploma e suporte por 6 meses">
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sYAE0qN0r7"></li>
-                                <li data-slide-to="1" data-target="#lb-sYAE0qN0r7"></li>
-                                <li data-slide-to="2" data-target="#lb-sYAE0qN0r7"></li>
-                                <li data-slide-to="3" data-target="#lb-sYAE0qN0r7"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sYEkBIWTIW"></li>
+                                <li data-slide-to="1" data-target="#lb-sYEkBIWTIW"></li>
+                                <li data-slide-to="2" data-target="#lb-sYEkBIWTIW"></li>
+                                <li data-slide-to="3" data-target="#lb-sYEkBIWTIW"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sYAE0qN0r7">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sYEkBIWTIW">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sYAE0qN0r7">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sYEkBIWTIW">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
